--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,7 +35,8 @@
             "prefix": "app",
             "style": "camelCase"
           }
-        ]
+        ],
+        "@angular-eslint/template/eqeqeq": "off"
       }
     },
     {
